# bandedmatrix

./: .gitignore  CMakeLists.txt  README.md
.claude/: CLAUDE.md
.claude/envs/: envs.md
.claude/skills/high-perf/: SKILL.md
.claude/tasks/: task_001.md  task_002.md  task_003.md  task_004.md
demo/: demo.cpp
docs/: report.md  report2.md  report3.md  report4.md
src/: banded_matrix.cpp  banded_matrix.h  dense_matrix.cpp  dense_matrix.h  mtx_loader.h
test/: bench_bandwidth.cpp  bench_blocked.cpp  bench_dense_blocked.cpp  bench_realworld.cpp  benchmark.cpp  benchmark_eigen.cpp  test_banded_matrix.cpp
